<resources>
    <string name="app_name">Handy Tune</string>
    <string name="welcome_message">World\'s Greatest!</string>
    <string name="spotify_login">Spotify Login</string>
    <string name="spotify_logout">Logout</string>
    <string name="search">Search</string>
    <string name="playlist">My Playlist</string>
    <string name="find_spotify_user">Find Spotify User</string>
    <string name="username">Username</string>
    <string name="userId">User ID</string>
    <string name="find_music">Find Music</string>
    <string name="image_result">Image result</string>
    <string name="search_user_title">Search for user</string>
    <string name="user_search_field">Write a username here</string>
    <string name="avatarImageView">User profile picture</string>
    <string name="rowitemText">TextView</string>
    <string name="artist">Artists</string>
    <string name="albums">Albums</string>
    <string name="top_tracks">Top tracks</string>
    <string name="view_more">View more</string>
    <string name="plus_sign">+</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="name_your_playlist">Name your playlist</string>
    <string name="enter_name_of_playlist">Enter Name of Playlist</string>
</resources>
